<resources>
    <string name="app_name">SyncUp</string>
    <string name="action_settings">Settings</string>
    <string name="button_friends">Friends</string>
    <string name="button_events">Events</string>
    <string name="button_settings">Settings</string>
    <string name="from">from</string>
    <string name="until">until</string>
    <string name="time_suggestions">Time Suggestions</string>
    <string name="most_people_available_on">Most People Available On:</string>
    <string name="longest_availability_on">Longest Availability On:</string>
    <string name="my_availability">My Availability</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="select_begin_time">Select Begin Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="saved_times">Saved Times</string>
    <string name="midnight">Midnight</string>
    <string name="noon">Noon</string>
    <string name="delete_saved_times">Delete Saved Times</string>
    <string name="delete">Delete</string>
    <string name="events_heading">Events</string>
    <string name="create_new_event_button">Create New Event</string>
    <string name="select_default_event_start_time">Select Default Start Time</string>
    <string name="name_your_event">Name Your Event</string>
    <string name="saved_events">Saved Events</string>
    <color name="orange_light">#fe5f55</color>
    <color name="black">#000000</color>
    <color name="background_light">#ffffff</color>
    <color name="grey">#ffffff</color>
    <color name="orange_button">#feafaa</color>

    <!--f0b67f-->
</resources>
