<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="45dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_height="wrap_content"
            android:background="@color/orange_light"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:id="@+id/linearlayout">

        <LinearLayout
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_width="match_parent"

            >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_medium"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/events_heading"
            android:id="@+id/textView5"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp">

            <EditText
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_event"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:minWidth="150dp"
                android:text="@string/name_your_event"
                android:layout_marginBottom="2dp" />

            <TextView
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_default_event_start_time"
                android:id="@+id/set_base_event_time"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp" />

            <Button
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_small"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_new_event_button"
                android:id="@+id/create_new_event"
                android:layout_gravity="center_horizontal"
                android:background="@color/orange_button"
                android:padding="2dp"
                android:layout_width="70dp"
                android:layout_height="28dp"
                android:layout_marginBottom="2dp" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_height="wrap_content"
            android:background="@color/orange_light"
            android:layout_width="match_parent"
            android:layout_below="@+id/linearlayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_medium"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/saved_events"
                        android:id="@+id/textView6"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_row="1"
                        android:layout_column="0"></GridLayout>
                </GridLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>
